--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,7 +4,10 @@
 }
 .heading div {
   display: flex;
-  width: 91%;
+  width: 91%; 
+  justify-content: center; 
+  /* flex-direction: column; */
+  /* align-items: center; */
 }
 .heading div input {
   border: 1px solid gray;
@@ -23,11 +26,11 @@
   /* padding-left: 0px;  */
   background:white;
   /* display: flex; */
-  align-items: center;
   align-content: center;
   border-radius: 5px;
   height: 2.5rem;
   font-size: 18px;
+  
   width: 20%; 
 }
 .heading div button:hover  {
