--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -4,13 +4,12 @@
 }
 .heading div {
   display: flex;
-  width: 91%; 
+  width: 91%;  
+  padding: 15px;
   justify-content: center; 
-  /* flex-direction: column; */
-  /* align-items: center; */
 }
 .heading div input {
-  border: 1px solid gray;
+  border: 1px solid gray; 
   padding: 10px;
   margin: 0px 15px;
   background: white;
