--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: rgba(14, 205, 253, 0.884);
+  background-color: rgba(35, 202, 243, 0.884);
 }
 ul {
   list-style: none;
@@ -58,7 +58,7 @@ ul {
 }
 
 .listTask input[type="checkbox"]:checked {
-  background: #327dff;
+  background: #ecf3f3;
   outline: none;
   border: 1px solid rgba(50, 125, 255, 1);
 }
